--- a/town-hall-RogerA-cpu-main/town_hall/styles/c05x_sorkin.css
+++ b/town-hall-RogerA-cpu-main/town_hall/styles/c05x_sorkin.css
@@ -1,4 +1,36 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+    width: 650px;
+    margin: 0% auto;
+    border-width: 15px;
+    border-color: blue;
+    background-color:white;
+    border-style: double;
 }
+
+ h1{ font-size: 150%;
+            color:blue;
+            text-align:left;
+        margin-bottom: .25em;}
+h2{ font-size: 125%;
+    margin:auto o;
+    padding: 20px 0px 0px 0px ; }
+h3 {font-size: 115%;
+    margin: auto;
+    padding: 0%;}
+ul{ margin: auto;
+    padding: 10px 10px 10px 10px;}
+li{  margin: 0px 10px 10px 10px;
+     padding: 10px 10px 10px 10px;}
+cite{ color: blue ;
+    text-align:right;}
+
+     main {padding:auto;}
+footer{font-size:90%;
+    margin:0 auto;
+    padding-top: 20px ;
+    text-align: center;
+    width: 95%;
+    border-top: 5px solid blue ;
+     }
