--- a/town-hall-RogerA-cpu-main/town_hall/styles/c06x_speaker.css
+++ b/town-hall-RogerA-cpu-main/town_hall/styles/c06x_speaker.css
@@ -58,13 +58,16 @@ section h1 {
 section h2 {
 	font-size: 120%;
 	padding-bottom: .25em;
+	width: 100%;
 }
-article p {
-	padding-bottom: .5em;
-}
+article{
+	width: auto;
+	column-count: 2;
+}   
 article img {
-	float: right;
-	margin: .25em 0 1em 1em;
+	
+	margin: 10px 10px 5px 5px ;
+	width: 275px;
 	border: 1px solid black;
 }
 aside {
