--- a/town-hall-RogerA-cpu-main/town_hall/styles/c07x_speaker.css
+++ b/town-hall-RogerA-cpu-main/town_hall/styles/c07x_speaker.css
@@ -73,6 +73,32 @@ article img {
 	margin: .5em 0 1em 1em;
 	border: 1px solid black;
 }
+#nav_list ul {
+	list-style-type: none; 
+	margin-bottom: 1.5em;
+} 
+#nav_list ul li { width: 210px;
+	margin-bottom: 0.5em;
+	border: 2px solid black;
+	border-radius: 10px 10px 10px 10px;
+	box-shadow: 2px 2px 2px 2px #800000;
+	text-align: left;
+} 
+#nav_list ul li a { display: block;
+	padding: .5em 1.5em .5em .5em; 
+	text-decoration: none; 
+	font-weight: bold; color: black;
+}
+
+	#nav_list ul li a.current { background-color: silver;
+	}
+
+	.arrow{padding: 0;
+	    margin: 0;
+		background-image: url("../images/right.jpg");
+		background-repeat: no-repeat;
+		background-position: 97% 50% ;
+	    }
 
 /* the styles for the aside */
 aside {
