--- a/town-hall-RogerA-cpu-main/town_hall/styles/c07x_speaker.css
+++ b/town-hall-RogerA-cpu-main/town_hall/styles/c07x_speaker.css
@@ -9,7 +9,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 850px;
+	width: 98%;
+    max-width: 850px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -46,7 +47,7 @@ main {
 
 /* the styles for the section */
 section {
-	width: 575px;
+	width: 28.75%;
 	float: right;
 	padding: 0 20px 20px 20px;
 }
@@ -70,14 +71,15 @@ article h2 {
 }
 article img {
 	float: right;
-	margin: .5em 0 1em 1em;
+	margin: .5em 0 1em 16px;
 	border: 1px solid black;
+	max-width: 50%;
 }
 #nav_list ul {
 	list-style-type: none; 
 	margin-bottom: 1.5em;
 } 
-#nav_list ul li { width: 210px;
+#nav_list ul li { width: 25.78%;
 	margin-bottom: 0.5em;
 	border: 2px solid black;
 	border-radius: 10px 10px 10px 10px;
@@ -85,7 +87,7 @@ article img {
 	text-align: left;
 } 
 #nav_list ul li a { display: block;
-	padding: .5em 1.5em .5em .5em; 
+	padding: .5em 24px .5em 8px; 
 	text-decoration: none; 
 	font-weight: bold; color: black;
 }
@@ -102,7 +104,7 @@ article img {
 
 /* the styles for the aside */
 aside {
-	width: 215px;
+	width: 10.75%;
 	float: right;
 	padding: 0 0 20px 20px;
 }
