--- a/town-hall-RogerA-cpu-main/town_hall/styles/c11x_rollovers.css
+++ b/town-hall-RogerA-cpu-main/town_hall/styles/c11x_rollovers.css
@@ -25,11 +25,11 @@ header {
 	    30deg, #f6bb73 0%, #fffded 30%, white 50%, #fffded 80%, #f6bb73 100%);
 }
 
-#image1{background-image:url("../images/sampson_dinosaur.jpg");}
-
+#image1{background-image:url("../images/sampson_dinosaur.jpg");
+width: 260px;
+height: 260px;
+background-repeat: no-repeat;}
 #image1:hover{background-image:url("../images/sorkin_desk260.jpg");
-	width: 260px;
-	height: 260px;
 	background-repeat: no-repeat;
 }
 header h2 {
