--- a/town_hall/styles/c06x_speaker.css
+++ b/town_hall/styles/c06x_speaker.css
@@ -47,7 +47,7 @@ main {
 section {
 	padding: 0 20px 20px 20px;
 	width: 575px;
-	float: right;	
+	float: left;	
 }
 section h1 {
 	color: #800000;
@@ -58,18 +58,21 @@ section h1 {
 section h2 {
 	font-size: 120%;
 	padding-bottom: .25em;
+	width: 100%;
 }
-article p {
-	padding-bottom: .5em;
-}
+article{
+	width: auto;
+	column-count: 2;
+}   
 article img {
-	float: right;
-	margin: .25em 0 1em 1em;
+	
+	margin: 10px 10px 5px 5px ;
+	width: 275px;
 	border: 1px solid black;
 }
 aside {
 	width: 215px;
-	float: left;
+	float: right;
 	padding: 0 0 20px 20px;
 }
 aside h2 {
