--- a/town_hall/styles/c07x_speaker.css
+++ b/town_hall/styles/c07x_speaker.css
@@ -9,7 +9,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 850px;
+	width: 98%;
+    max-width: 850px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -46,7 +47,7 @@ main {
 
 /* the styles for the section */
 section {
-	width: 575px;
+	width: 28.75%;
 	float: right;
 	padding: 0 20px 20px 20px;
 }
@@ -70,13 +71,40 @@ article h2 {
 }
 article img {
 	float: right;
-	margin: .5em 0 1em 1em;
+	margin: .5em 0 1em 16px;
 	border: 1px solid black;
+	max-width: 50%;
 }
+#nav_list ul {
+	list-style-type: none; 
+	margin-bottom: 1.5em;
+} 
+#nav_list ul li { width: 25.78%;
+	margin-bottom: 0.5em;
+	border: 2px solid black;
+	border-radius: 10px 10px 10px 10px;
+	box-shadow: 2px 2px 2px 2px #800000;
+	text-align: left;
+} 
+#nav_list ul li a { display: block;
+	padding: .5em 24px .5em 8px; 
+	text-decoration: none; 
+	font-weight: bold; color: black;
+}
+
+	#nav_list ul li a.current { background-color: silver;
+	}
+
+	.arrow{padding: 0;
+	    margin: 0;
+		background-image: url("../images/right.jpg");
+		background-repeat: no-repeat;
+		background-position: 97% 50% ;
+	    }
 
 /* the styles for the aside */
 aside {
-	width: 215px;
+	width: 10.75%;
 	float: right;
 	padding: 0 0 20px 20px;
 }
