--- a/town_hall/styles/c09x_main.css
+++ b/town_hall/styles/c09x_main.css
@@ -174,6 +174,7 @@ footer p {
 #mobile_menu {
 	display: none;
 }
+#nav_menu{ display: block;}
 
 /* screen widths 768px to 959px */
 @media only screen and (max-width: 959px) {
@@ -193,25 +194,28 @@ footer p {
         justify-content: center;
     }
     header h2, header h3 { flex-basis: 100%; }
-    main { flex-direction: column; }
+    main { flex-direction: row; }
 	section {
-	    order: 1;
+	    order: 2;
 		width: 95%;
 	}
-	aside {
-	    order: 2;
+	#left  {
+	    order: 1;
 		padding-right: 2.5%;
 		width: 95%;
 	}
+
+
 	article img { max-width: 30%; }
-	#speakers {
-		column-count: 2;
+	#right {
+		order:2;
+		column-count: 0;
 	}
 	#nav_menu {
 		display: none;
 	}
 	#mobile_menu {
-		display: block;
+		display: none;
 	}
 	.slicknav_menu {
 		background-color: #800000 !important;
