--- a/town_hall/styles/c11x_rollovers.css
+++ b/town_hall/styles/c11x_rollovers.css
@@ -24,6 +24,14 @@ header {
 	background-image: linear-gradient(
 	    30deg, #f6bb73 0%, #fffded 30%, white 50%, #fffded 80%, #f6bb73 100%);
 }
+
+#image1{background-image:url("../images/sampson_dinosaur.jpg");
+width: 260px;
+height: 260px;
+background-repeat: no-repeat;}
+#image1:hover{background-image:url("../images/sorkin_desk260.jpg");
+	background-repeat: no-repeat;
+}
 header h2 {
 	font-size: 175%;
 	color: #800000;
